gen/expressionParser.java
// Generated from /Users/alexandrulungu/Work/atek/java-semantics/src/main/antlr4/AlkExpressions.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class expressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, LINE_COMMENT=3, ASSERT=4, ASSUME=5, SYMBOLIC=6, INVARIANT=7, 
		REQURIES=8, ENSURES=9, LOOPASSESRT=10, WHILEMODIFIES=11, RESULT=12, OLD=13, 
		IMPLIES=14, EQUIV=15, FORALL=16, EXISTS=17, QUANTIFIER_SEPARATOR=18, TO=19, 
		IF=20, ELSE=21, WHILE=22, DO=23, FOR=24, FOREACH=25, IN=26, FROM=27, OUT=28, 
		HAVOC=29, VAR=30, CHOOSE=31, UNIFORM=32, REPEAT=33, RETURN=34, SUCCESS=35, 
		UNTIL=36, FAILURE=37, CONTINUE=38, BREAK=39, EMPTYARRAY=40, EMPTYMAP=41, 
		EMPTYSET=42, EMPTYLIST=43, EMPTYSTRUCTURE=44, MODIFIES=45, USES=46, INCLDUE=47, 
		XOR=48, ABS=49, ACOS=50, ASIN=51, ATAN=52, COS=53, LOG=54, PI=55, POW=56, 
		SIN=57, SQRT=58, TAN=59, LEN=60, ARRAY=61, LIST=62, SET=63, AT=64, BELONGSTO=65, 
		DELETE=66, EMPTY=67, END=68, FIRST=69, FLOAT=70, INSERT=71, KEYS=72, INTEGER=73, 
		BOOLEAN=74, PRINT=75, POPBACK=76, POPFRONT=77, PUSHBACK=78, PUSHFRONT=79, 
		REMOVE=80, REMOVEALLEQTO=81, REMOVEAT=82, SINGLETONSET=83, SIZE=84, SPLIT=85, 
		TOPBACK=86, TOPFRONT=87, UPDATE=88, UNIFORMNAT=89, FLIP=90, UNIFORMFLOAT=91, 
		UNIFORMPERM=92, SOTHAT=93, SYM=94, ARROW=95, NUMSIGN=96, ANNO=97, COUNT=98, 
		UNION=99, INTERSECT=100, SUBTRACT=101, INT=102, DOUBLE=103, BOOL=104, 
		ID=105, PLUSPLUS=106, MINUSMINUS=107, BITWISE_AND=108, PLUSMOD=109, MINUSMOD=110, 
		PLUSPLUSMOD=111, MINUSMINUSMOD=112, LOWER=113, GREATER=114, LOWEREQ=115, 
		GREATEREQ=116, ISEQUAL=117, NOTEQUAL=118, ASSIGNMENT_OPERATOR=119, MINUS=120, 
		PLUS=121, MUL=122, DIV=123, MOD=124, LPAR=125, RPAR=126, LEFTSHIFT=127, 
		RIGHTSHIFT=128, OR=129, AND=130, NOT=131, SEMICOLON=132, DPOINT=133, VBAR=134, 
		LCB=135, RCB=136, COMMA=137, POINT=138, LBRA=139, RBRA=140, QUOTE=141, 
		QUESTION=142, STRING=143;
	public static final int
		RULE_expression = 0, RULE_assign_expression = 1, RULE_conditional_expression = 2, 
		RULE_logical_or_expression = 3, RULE_logical_and_expression = 4, RULE_in_expression = 5, 
		RULE_equality_expression = 6, RULE_relational_expression = 7, RULE_set_expression = 8, 
		RULE_bitwise_or = 9, RULE_bitwise_and = 10, RULE_shift_expression = 11, 
		RULE_additive_expression = 12, RULE_multiplicative_expression = 13, RULE_unary_expression = 14, 
		RULE_postfix_expression = 15, RULE_factor = 16, RULE_base_factor = 17, 
		RULE_anno = 18, RULE_value = 19, RULE_scalar_value = 20, RULE_ref_name = 21, 
		RULE_data_structure = 22, RULE_interval = 23, RULE_spec = 24, RULE_component = 25, 
		RULE_mapping_component = 26, RULE_array = 27, RULE_list = 28, RULE_mapping = 29, 
		RULE_structure = 30, RULE_set = 31, RULE_function_call = 32, RULE_builtin_function = 33, 
		RULE_builtin_method = 34, RULE_dataType = 35, RULE_function_name = 36, 
		RULE_method_name = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "assign_expression", "conditional_expression", "logical_or_expression", 
			"logical_and_expression", "in_expression", "equality_expression", "relational_expression", 
			"set_expression", "bitwise_or", "bitwise_and", "shift_expression", "additive_expression", 
			"multiplicative_expression", "unary_expression", "postfix_expression", 
			"factor", "base_factor", "anno", "value", "scalar_value", "ref_name", 
			"data_structure", "interval", "spec", "component", "mapping_component", 
			"array", "list", "mapping", "structure", "set", "function_call", "builtin_function", 
			"builtin_method", "dataType", "function_name", "method_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'@assert'", "'@assume'", "'@symbolic'", "'@invariant'", 
			"'@requires'", "'@ensures'", "'@loopassert'", "'@modifies'", "'\\result'", 
			"'\\old'", "'==>'", "'<==>'", "'forall'", "'exists'", "'::'", "'|->'", 
			"'if'", "'else'", "'while'", "'do'", "'for'", "'foreach'", "'in'", "'from'", 
			"'out'", "'@havoc'", "'@var'", "'choose'", "'uniform'", "'repeat'", "'return'", 
			"'success'", "'until'", "'failure'", "'continue'", "'break'", "'emptyArray'", 
			"'emptyMap'", "'emptySet'", "'emptyList'", "'emptyStructure'", "'modifies'", 
			"'uses'", "'include'", "'xor'", "'abs'", "'acos'", "'asin'", "'atan'", 
			"'cos'", "'log'", "'pi'", "'pow'", "'sin'", "'sqrt'", "'tan'", "'len'", 
			"'array'", "'list'", "'set'", "'at'", "'belongsTo'", "'delete'", "'empty'", 
			"'end'", "'first'", "'float'", "'insert'", "'keys'", "'int'", "'boolean'", 
			"'print'", "'popBack'", "'popFront'", "'pushBack'", "'pushFront'", "'remove'", 
			"'removeAllEqTo'", "'removeAt'", "'singletonSet'", "'size'", "'split'", 
			"'topBack'", "'topFront'", "'update'", "'uniformNat'", "'flip'", "'uniformFloat'", 
			"'uniformPerm'", "'s.t.'", "'$'", "'->'", "'#'", "'@'", "'Count'", "'U'", 
			"'^'", "'\\'", null, null, null, null, "'++'", "'--'", "'&'", "'+%'", 
			"'-%'", "'++%'", "'--%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
			null, "'-'", "'+'", "'*'", "'/'", "'%'", "'('", "')'", "'<<'", "'>>'", 
			"'||'", "'&&'", "'!'", "';'", "':'", "'|'", "'{'", "'}'", "','", "'.'", 
			"'['", "']'", "'\"'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "LINE_COMMENT", "ASSERT", "ASSUME", "SYMBOLIC", 
			"INVARIANT", "REQURIES", "ENSURES", "LOOPASSESRT", "WHILEMODIFIES", "RESULT", 
			"OLD", "IMPLIES", "EQUIV", "FORALL", "EXISTS", "QUANTIFIER_SEPARATOR", 
			"TO", "IF", "ELSE", "WHILE", "DO", "FOR", "FOREACH", "IN", "FROM", "OUT", 
			"HAVOC", "VAR", "CHOOSE", "UNIFORM", "REPEAT", "RETURN", "SUCCESS", "UNTIL", 
			"FAILURE", "CONTINUE", "BREAK", "EMPTYARRAY", "EMPTYMAP", "EMPTYSET", 
			"EMPTYLIST", "EMPTYSTRUCTURE", "MODIFIES", "USES", "INCLDUE", "XOR", 
			"ABS", "ACOS", "ASIN", "ATAN", "COS", "LOG", "PI", "POW", "SIN", "SQRT", 
			"TAN", "LEN", "ARRAY", "LIST", "SET", "AT", "BELONGSTO", "DELETE", "EMPTY", 
			"END", "FIRST", "FLOAT", "INSERT", "KEYS", "INTEGER", "BOOLEAN", "PRINT", 
			"POPBACK", "POPFRONT", "PUSHBACK", "PUSHFRONT", "REMOVE", "REMOVEALLEQTO", 
			"REMOVEAT", "SINGLETONSET", "SIZE", "SPLIT", "TOPBACK", "TOPFRONT", "UPDATE", 
			"UNIFORMNAT", "FLIP", "UNIFORMFLOAT", "UNIFORMPERM", "SOTHAT", "SYM", 
			"ARROW", "NUMSIGN", "ANNO", "COUNT", "UNION", "INTERSECT", "SUBTRACT", 
			"INT", "DOUBLE", "BOOL", "ID", "PLUSPLUS", "MINUSMINUS", "BITWISE_AND", 
			"PLUSMOD", "MINUSMOD", "PLUSPLUSMOD", "MINUSMINUSMOD", "LOWER", "GREATER", 
			"LOWEREQ", "GREATEREQ", "ISEQUAL", "NOTEQUAL", "ASSIGNMENT_OPERATOR", 
			"MINUS", "PLUS", "MUL", "DIV", "MOD", "LPAR", "RPAR", "LEFTSHIFT", "RIGHTSHIFT", 
			"OR", "AND", "NOT", "SEMICOLON", "DPOINT", "VBAR", "LCB", "RCB", "COMMA", 
			"POINT", "LBRA", "RBRA", "QUOTE", "QUESTION", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AlkExpressions.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public expressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImpliesExprContext extends ExpressionContext {
		public Assign_expressionContext assign_expression() {
			return getRuleContext(Assign_expressionContext.class,0);
		}
		public TerminalNode IMPLIES() { return getToken(expressionParser.IMPLIES, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ImpliesExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterImpliesExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitImpliesExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitImpliesExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EquivExprContext extends ExpressionContext {
		public Assign_expressionContext assign_expression() {
			return getRuleContext(Assign_expressionContext.class,0);
		}
		public TerminalNode EQUIV() { return getToken(expressionParser.EQUIV, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public EquivExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterEquivExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitEquivExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitEquivExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForallExprContext extends ExpressionContext {
		public TerminalNode FORALL() { return getToken(expressionParser.FORALL, 0); }
		public TerminalNode QUANTIFIER_SEPARATOR() { return getToken(expressionParser.QUANTIFIER_SEPARATOR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(expressionParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(expressionParser.ID, i);
		}
		public List<TerminalNode> DPOINT() { return getTokens(expressionParser.DPOINT); }
		public TerminalNode DPOINT(int i) {
			return getToken(expressionParser.DPOINT, i);
		}
		public List<DataTypeContext> dataType() {
			return getRuleContexts(DataTypeContext.class);
		}
		public DataTypeContext dataType(int i) {
			return getRuleContext(DataTypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(expressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(expressionParser.COMMA, i);
		}
		public ForallExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterForallExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitForallExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitForallExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FolToExprContext extends ExpressionContext {
		public Assign_expressionContext assign_expression() {
			return getRuleContext(Assign_expressionContext.class,0);
		}
		public FolToExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterFolToExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitFolToExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitFolToExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExistsExprContext extends ExpressionContext {
		public TerminalNode EXISTS() { return getToken(expressionParser.EXISTS, 0); }
		public TerminalNode QUANTIFIER_SEPARATOR() { return getToken(expressionParser.QUANTIFIER_SEPARATOR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(expressionParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(expressionParser.ID, i);
		}
		public List<TerminalNode> DPOINT() { return getTokens(expressionParser.DPOINT); }
		public TerminalNode DPOINT(int i) {
			return getToken(expressionParser.DPOINT, i);
		}
		public List<DataTypeContext> dataType() {
			return getRuleContexts(DataTypeContext.class);
		}
		public DataTypeContext dataType(int i) {
			return getRuleContext(DataTypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(expressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(expressionParser.COMMA, i);
		}
		public ExistsExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterExistsExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitExistsExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitExistsExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		int _la;
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new ImpliesExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				assign_expression();
				setState(77);
				match(IMPLIES);
				setState(78);
				expression();
				}
				break;
			case 2:
				_localctx = new EquivExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				assign_expression();
				setState(81);
				match(EQUIV);
				setState(82);
				expression();
				}
				break;
			case 3:
				_localctx = new ForallExprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				match(FORALL);
				{
				setState(85);
				match(ID);
				setState(86);
				match(DPOINT);
				setState(87);
				dataType();
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(88);
					match(COMMA);
					setState(89);
					match(ID);
					setState(90);
					match(DPOINT);
					setState(91);
					dataType();
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				setState(97);
				match(QUANTIFIER_SEPARATOR);
				setState(98);
				expression();
				}
				break;
			case 4:
				_localctx = new ExistsExprContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(EXISTS);
				{
				setState(101);
				match(ID);
				setState(102);
				match(DPOINT);
				setState(103);
				dataType();
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(104);
					match(COMMA);
					setState(105);
					match(ID);
					setState(106);
					match(DPOINT);
					setState(107);
					dataType();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				setState(113);
				match(QUANTIFIER_SEPARATOR);
				setState(114);
				expression();
				}
				break;
			case 5:
				_localctx = new FolToExprContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				assign_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_expressionContext extends ParserRuleContext {
		public Assign_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_expression; }
	 
		public Assign_expressionContext() { }
		public void copyFrom(Assign_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignExpressionContext extends Assign_expressionContext {
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public TerminalNode ASSIGNMENT_OPERATOR() { return getToken(expressionParser.ASSIGNMENT_OPERATOR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignExpressionContext(Assign_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterAssignExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitAssignExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitAssignExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ToConditionalExprContext extends Assign_expressionContext {
		public Conditional_expressionContext conditional_expression() {
			return getRuleContext(Conditional_expressionContext.class,0);
		}
		public ToConditionalExprContext(Assign_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterToConditionalExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitToConditionalExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitToConditionalExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_expressionContext assign_expression() throws RecognitionException {
		Assign_expressionContext _localctx = new Assign_expressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assign_expression);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new AssignExpressionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				factor(0);
				setState(120);
				match(ASSIGNMENT_OPERATOR);
				setState(121);
				expression();
				}
				break;
			case 2:
				_localctx = new ToConditionalExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				conditional_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conditional_expressionContext extends ParserRuleContext {
		public Conditional_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional_expression; }
	 
		public Conditional_expressionContext() { }
		public void copyFrom(Conditional_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConditionalExpressionContext extends Conditional_expressionContext {
		public Logical_or_expressionContext logical_or_expression() {
			return getRuleContext(Logical_or_expressionContext.class,0);
		}
		public TerminalNode QUESTION() { return getToken(expressionParser.QUESTION, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode DPOINT() { return getToken(expressionParser.DPOINT, 0); }
		public ConditionalExpressionContext(Conditional_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).enterConditionalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof expressionListener ) ((expressionListener)listener).exitConditionalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof expressionVisitor ) return ((expressionVisitor<? extends T>)visitor).visitConditionalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Conditional_expressionContext conditional_expression() throws RecognitionException {
		Conditional_expressionContext _localctx = new Conditional_expressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_conditional_expression);
		try {
			_localctx = new ConditionalExpressionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			logical_or_expression();
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(127);
				match(QUESTION);
				setState(128);
				expression();
				setState(129);
				match(DPOINT);
				setState(130);
				expression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
